# quant-challenge

./: README.md
python/: pyproject.toml  requirements.txt  research_report.txt  trades_report.csv
python/src/: config.py  main.py
python/src/application/: backtest_service.py  contracts.py  data_service.py  handlers.py  reporting_service.py  strategy_service.py
python/src/domain/: __init__.py  order_book.py
python/src/infrastructure/adapters/: __init__.py  bybit.py  bybit_rest_adapter.py  bybit_ws_adapter.py
