[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-challenge"
version = "0.1.0"
description = "Delta orderbook strategy research for Bybit"
authors = [{name = "AkuraAlina", email = "linensty@gmail.com"}]
dependencies = [
    "websockets>=11.0.3",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.2",
]

[tool.setuptools.packages.find]
where = ["src"]
